--- a/Web/Blog/static/css/style.css
+++ b/Web/Blog/static/css/style.css
@@ -1,12 +1,13 @@
 .bd{
-    background-image: url("{% static 'images/background.jpg' %}"); 
+    background-color:  #BACEC1;
     background-repeat: no-repeat; 
     background-size: cover; 
     background-position: center; 
-    background-attachment: fixed;    
+    background-attachment: fixed;   
+      
 }
 .navbar{
-    background-color:coral;
+    background-color:darkslateblue;
     font-family:cursive;
     padding-right:15px;
     padding-left:15px;
@@ -32,7 +33,7 @@ li a{
     margin-right:25px;
 }
 button{
-    background-color:black;
+    background-color: aqua;
     margin-left:10px;
     border-radius:10px;
     padding:10px;
@@ -44,35 +45,50 @@ button a{
     font-size:15px;
 }
 .cont{
+    width: 40%;
+    height: 70%;
     border-style: solid;
     border-width: 3px;
     border-color: coral;
     border-radius: 50px;
     justify-content: center;
+    text-align: center;
+    padding: 20px;
 }
 .cont h1{
-    color: coral;
+    color:azure;
 }
 .cont h2{
-    color: coral;
+    color:azure;
 }
 .cont h3{
-    color: coral;
+    color: azure;
 }
-.loginform{
-    position: relative;
-    width: 30%;
-    height: 60%;
-    border-style: solid;
-    border-width: 2px;
-    background-color: whitesmoke;
-    
+.content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    width: 100%;
 }
 .signupform{
-    position: relative;
-    width: 30%;
-    height: 60%;
+    width: 20%;
+    height: 70%;
     border-style: solid;
-    border-width: 2px;
-    background-color: whitesmoke;
+    border-width: medium;
+    border-color: blue;
+    border-radius: 10px;
+    padding: 2%;
+    
+
+    
+}
+.loginform{
+    width: 20%;
+    height: 70%;
+    border-style: solid;
+    border-width: medium;
+    border-color: navy;
+    border-radius: 10px;
+    padding: 2%;   
 }
