--- a/Web/Blog/templates/signup.html
+++ b/Web/Blog/templates/signup.html
@@ -1,24 +1,26 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="signupform">
   <h2>SIGNUP</h2>
   <form method="POST" action="">
     {% csrf_token %}
     {{form.username.label}}
-    {{form.username}}
+    {{form.username}}<br/>
 
     {{form.email.label}}
-    {{form.email}}
+    {{form.email}}<br/>
 
     {{form.password1.label}}
-    {{form.password1}}
+    {{form.password1}}<br/>
 
     {{form.password2.label}}
-    {{form.password2}}
+    {{form.password2}}<br/>
 
-    <input type="submit">
+    <input type="submit"><br/>
 
-    <h5>Don't Have an account?<a href="loginPage">Login Here!</a> </h5> 
+    <h5>Already Have an account?<a href="loginPage">Login Here!</a> </h5> 
 
   </form>
+</div>  
 {% endblock %}
