--- a/Web/Blog/templates/index.html
+++ b/Web/Blog/templates/index.html
@@ -1,14 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content%}
-<div class="cont">
-    <h1>Hi am Kanyi Erick</h1>
-    <h2> A Python Programmer!</h2>
-    <h3>Hey, am a python programmer specializing in:
-    <ul>Website Development: Django,Flask, Css,Html,Bootstrap,Sql</ul>
-    <ul>Python Automation</ul>
-    
-    Am also intrested in other python specialties such as cyber security, data analytics,machine learning and AI
-    </h3>
+<div class="w-3/4 my-6 mx-auto p-6 bg-gray-100 rounded-xl">
+    <h1 class="mb-6 text-3xl">Hi Am Kanyi Erick</h1>
+    <h1 class="mb-6 text-3xl">A Python Programmer!</h1>
+    <p class="text-lg text-gray-500">Am a python programmer specializing in different fields specifically Software and Website devolopment. I use the following python frameworks:
+        Django, Flask, Html and Css, TailWind Css, RestApi. I also major in Python Automation.<br>
+
+        I also seek to venture into other areas of Python such as; Machine Learning and Artificial Intelligence, CyberSecurity
+        and Data Analytics.
+    </p><br>
+
+    <button class="py-4 px=8 text-lg bg-teal-50 hover:bg-teal-700 rounded-xl text-sky-900">HIRE ME</button>
+        
 </div>
 {% endblock %}
