--- a/Web/Blog/templates/login.html
+++ b/Web/Blog/templates/login.html
@@ -1,18 +1,41 @@
-{% extends "base.html" %}
+{% extends 'Base.html' %}
+
+{% block title %}Login{% endblock %}
 
 {% block content %}
-<div class="loginform">
-  <h2>LOGIN</h2>
-  <form method="POST" action=".">
-  {% csrf_token %}
-  {{ form.as_p}}
+<div class="w-1/2 my-6 mx-auto p-6 bg-neutral-500 rounded-xl">
+    <h1 class="mb-6 text-3xl">Login</h1>
 
-  <input type="submit"><br/>
+    <form method="POST" action=" ">
+        {% csrf_token %}
+        <div class="mb-3">
+            <label class="inline-block mb-2">Username</label><br>
+            {{ form.username }}
+        </div>
 
+        <div class="mb-3">
+            <label class="inline-block mb-2">Password</label><br>
+            {{ form.password }}
+        </div>
 
-  <h5>Don't Have An Account?<a href="signup">Sign-Up Here!</a> </h5> 
+        {% if form.errors or form.non_field_errors %}
+            <div class="mb-3 p-6 bg-red-100 rounded-xl">
+                {% for field in form %}
+                    {{field.errors}}
+                {% endfor %}
 
-  </form>
-</div>  
+                {{ form.non_field_errors }}
+            </div>
+        {% endif %}
 
+        <button class="py-4 px=8 text-lg bg-teal hover:bg-teal-700 rounded-xl text-blue">Submit</button>
+        
+    {%for message in messages %}
+        <p id="messages">{{message}}</p>
+    {% endfor %}
+
+    <h5>Don't Have An Account? <a href="signup">Sign-Up Here!</a> </h5>
+        
+    </form>
+</div>
 {% endblock %}
