--- a/Web/Blog/static/css/style.css
+++ b/Web/Blog/static/css/style.css
@@ -1,16 +1,19 @@
-.bd{
-    background-color:  #BACEC1;
+.body{
+    background:rgb(255,255,255), rgb(254,215,173);
     background-repeat: no-repeat; 
     background-size: cover; 
     background-position: center; 
-    background-attachment: fixed;   
-      
+    background-attachment: fixed;    
 }
 .navbar{
     background-color:darkslateblue;
     font-family:cursive;
     padding-right:15px;
     padding-left:15px;
+    border-style: solid;
+    border-radius: 50px;
+    margin-top: 0px;
+    margin-bottom: 30px;
 }
 .navdiv{
     display:flex;
@@ -20,8 +23,9 @@
 .logo{
     font-size:35px;
     font-weight:600;
-    color:white;
+    color:white;    
 }
+
 li{
     list-style:none;
     display:inline-block;
@@ -64,31 +68,12 @@ button a{
 .cont h3{
     color: azure;
 }
-.content{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    width: 100%;
-}
-.signupform{
-    width: 20%;
-    height: 70%;
-    border-style: solid;
-    border-width: medium;
-    border-color: blue;
-    border-radius: 10px;
-    padding: 2%;
-    
 
-    
-}
-.loginform{
-    width: 20%;
-    height: 70%;
-    border-style: solid;
-    border-width: medium;
-    border-color: navy;
-    border-radius: 10px;
-    padding: 2%;   
-}
+
+
+
+
+
+
+        
+
