--- a/Web/Blog/templates/base.html
+++ b/Web/Blog/templates/base.html
@@ -5,29 +5,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>KanyiErick Website</title>
 </head>
-<body class="bd">
+<body class="body">
     <nav class="navbar">
       <div class="navdiv">
         <div class="logo"><a href="#">Code with Erick</a> </div>
           <ul>
             <button><a href="/">Home</a> </button>
-            <button><a href="loginPage">Sign In</a> </button>
-            <button><a href="signup">Sign Up</a> </button>
             <button><a href="blog">Blogs</a> </button>
             <button><a href="logout">Log Out</a> </button>
+
+            {% if request.user_is_authenticated %}
+            {% else %}
+            <button><a href="loginPage">Sign In</a> </button>
+            <button><a href="signup">Sign Up</a> </button>
+            {% endif %}
           </ul>
 
       </div>
 
-    </nav>
-  <section class="content">  
+    </nav>  
     {% block content %}
  
     {% endblock %}
-  </section>  
 </body>
+<footer class="h-1/8 py-6 px-6 mb-0px flex justify-between bg-gray-800">
+        <div class="w-2/3 pr-10">
+            <h3 class="mb-5 font-semibold text-gray-400">About</h3>
+            
+            <p class="text-lg text-gray-500">Welcome to my Website. It serves to show case my skills as a website designer</p>
+        </div>
+
+        <div class="w-1/3">
+            <h3 class="mb-5 font-semibold text-gray-400">Menu</h3>
+
+            <ul class="space-y-2">
+                <li><a href="{url 'contact'}" class="text-lg text-teal-500 hover:text-teal-700">Contact</a></li>
+                <li><a href="{url 'privacy'}" class="text-lg text-teal-500 hover:text-teal-700">Privacy Policy</a></li>
+                <li><a href="{url 'terms'}" class="text-lg text-teal-500 hover:text-teal-700">Terms&Conditions</a></li>
+            </ul>
+        </div>
+</footer>
 </html>
