--- a/Web/Blog/templates/blog.html
+++ b/Web/Blog/templates/blog.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Blog Posts!</h1>  <button><a href="logout">Log Out</a> </button>
+<h6>Blog Posts!</h6>  
     {% for post in object_list %}
     <div class="shadow p-3 mb-5 bg-body rounded">
 
